--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/sialvsic/graphql-demo/issues"
   },
-  "homepage": "https://github.com/sialvsic/graphql-demo#readme"
+  "homepage": "https://github.com/sialvsic/graphql-demo#readme",
+  "dependencies": {
+    "apollo-server": "^2.6.3",
+    "graphql": "^14.3.1"
+  }
 }
