--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "这是Graphql学习过程的Demo库，使用apollo server",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
